Prevent long path to break the div

--- a/wiki/src/install/inc/stylesheets/dave.css
+++ b/wiki/src/install/inc/stylesheets/dave.css
@@ -331,3 +331,10 @@ html[data-extension^="ok"] #bittorrent-minor {
 #verify > .btn::before {
   content: "3/3"
 }
+
+
+#download-path {
+  display: inline-block;
+  overflow: auto;
+  width: 400px;
+}
